test/files/pos/t4757/A_2.scala
object A {
  def ss = P.x(3)(Nil)
}

